user api update
